fixed some alignment issues

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -30,7 +30,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #ffffff;
-  --bs-secondary: #303030;
+  --bs-secondary: #bebebe;
   --bs-success: #198754;
   --bs-info: #005aa3;
   --bs-warning: #ffc107;
@@ -38,7 +38,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 255, 255, 255;
-  --bs-secondary-rgb: 48, 48, 48;
+  --bs-secondary-rgb: 190, 190, 190;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -133,8 +133,9 @@
   --bs-body-bg-rgb: 33, 37, 41;
   --bs-emphasis-color: #fff;
   --bs-emphasis-color-rgb: 255, 255, 255;
-  --bs-secondary-color: rgba(222, 226, 230, 0.75);
+  --bs-secondary-color: rgba(138, 138, 138, 0.75);
   --bs-secondary-color-rgb: 222, 226, 230;
+  --bs-secondary-rgb: 34, 34, 34;
   --bs-secondary-bg: #222222;
   --bs-secondary-bg-rgb: 34, 34, 34;
   --bs-tertiary-color: rgba(222, 226, 230, 0.5);
@@ -3869,7 +3870,7 @@ textarea.form-control-lg {
   border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
 }
 .nav-link{
-  --bs-nav-tabs-link-active-bg: var(--bs-body-bg);
+  --bs-nav-tabs-link-active-bg: var(--bs-secondary-color);
   --bs-nav-tabs-border-radius: var(--bs-border-radius);
 }
 
